src/test/deca/syntax/parser/valid/declar_int_with_int.deca
// Parser test, int identifier name (no problem should be caused)

{
    float int = 5;
}