src/test/deca/syntax/parser/invalid/decl_var_expr_ident_reserved_words_if.deca
// Parser test, identifier unavailable, reserved word

{
    int if = 5;
}